syntax = "proto3";

package greet;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply);

  rpc SayBye(HelloRequest) returns (ByeReply);
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }

message ByeReply {
  oneof message {
    string bye = 1;
    string byebye = 2;
  };
}
